--- a/automated_demo_project/.gitignore
+++ b/automated_demo_project/.gitignore
@@ -11,7 +11,9 @@ lerna-debug.log*
 node_modules/
 .npm
 .pnpm-debug.log*
-
+#reports
+allure-results/
+allure-report/
 # Test Results
 /test-results/
 /playwright-report/
